--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,9 @@ dependencies:
   firebase_auth: ^3.3.19
   firebase_messaging: ^11.1.0
   cloud_firestore: ^3.1.17
+  firebase_storage: ^10.2.18
   icofont_flutter: ^1.4.0
+  image_picker: ^0.8.5+3
 
 
 
@@ -74,8 +76,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/placeholder.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
